; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_token_length.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_token_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_token = type { %struct.tl_token*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tl_token*, i32*, i32*)* @tl_token_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tl_token_length(%struct.tl_token* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.tl_token*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.tl_token* %0, %struct.tl_token** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32*, i32** %5, align 8
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %12, %3
  %10 = load %struct.tl_token*, %struct.tl_token** %4, align 8
  %11 = icmp ne %struct.tl_token* %10, null
  br i1 %11, label %12, label %28

12:                                               ; preds = %9
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %13, align 4
  %16 = load %struct.tl_token*, %struct.tl_token** %4, align 8
  %17 = getelementptr inbounds %struct.tl_token, %struct.tl_token* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @strlen(i32 %18)
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %20, align 4
  %22 = sext i32 %21 to i64
  %23 = add nsw i64 %22, %19
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %20, align 4
  %25 = load %struct.tl_token*, %struct.tl_token** %4, align 8
  %26 = getelementptr inbounds %struct.tl_token, %struct.tl_token* %25, i32 0, i32 0
  %27 = load %struct.tl_token*, %struct.tl_token** %26, align 8
  store %struct.tl_token* %27, %struct.tl_token** %4, align 8
  br label %9

28:                                               ; preds = %9
  ret void
}

declare dso_local i64 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
